Completed header content and styling. added content for main body. starting styling now.

--- a/index.html
+++ b/index.html
@@ -8,18 +8,57 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="header-title">
-    <img class="logo" src="images/logo.jpg" title="Logo">
-    <div class="title-links">
-      <ul>
-        <li>About</li>
-        <li>Contact Us</li>
+
+  <!-- ============= start of header ============= -->
+  <div class="header">
+    <div class="header-title">
+      <img class="logo" src="images/logo.jpg" title="Logo">
+      <div class="title-links">
+        <ul>
+          <a href="index.html"><li>About</li></a>
+          <a href="index.html"><li>Contact Us</li></a>
       </ul>
+      </div>
+    </div>
+    <div class="header-content">
+      <div class="header-column">
+        <h1>This website has random squirrels.</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+        <button id="sign-up">Sign Up</button>
+      </div>
+      <img class="header-img" src="images/image.jpg" title="image">
     </div>
   </div>
-  <div class="header-content">
-    <h1>This website is awesome</h1>
-    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+  <!-- ============= end of header ============= -->
+
+  <!-- ============= start of content ============= -->
+  <div class="content">
+    <h2 class="content-title">Some random information</h2>
+      <div class="info-boxes">
+        <div class="box">
+          <img src="images/sq-1.jpg">
+          <p>This is a squirrel in a fedora and suit, I'm pretty sure he's a mob boss.</p>
+        </div>
+        <div class="box">
+          <img src="images/sq-2.jpg">
+          <p>This is a squirrel in a bowtie and suit, looks like an accountant squirrel.</p>
+        </div>
+        <div class="box">
+          <img src="images/sq-3.jpg">
+          <p>This is a squirrel in a normal suit, he's the accountant squirrel's boss.</p>
+        </div>
+        <div class="box">
+          <img src="images/sq-4.jpg">
+          <p>This Astronaught squirrel looks down on all the other squirrels cause he thinks he's better just cause he's been to space.</p>
+        </div>
+      </div>
   </div>
+  <!-- ============= end of content ============= -->
+
+  <!-- ============= start of footer ============= -->
+  <div class="footer">
+
+  </div>
+  <!-- ============= end of footer ============= -->
 </body>
 </html>
