completed page version 1.0.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <!-- ============= start of content ============= -->
   <div class="content">
-    <h2 class="content-title">Some random information</h2>
+    <h1 class="content-title">Some random information</h1>
       <div class="info-boxes">
         <div class="box">
           <img src="images/sq-1.jpg">
@@ -52,12 +52,33 @@
           <p>This Astronaught squirrel looks down on all the other squirrels cause he thinks he's better just cause he's been to space.</p>
         </div>
       </div>
-  </div>
+    </div>
   <!-- ============= end of content ============= -->
+    
+  <!-- ============= start of quote ============= -->
+  <div class="quote">
+    <div class="quote-flex">
+      <h1 class="quote-content">This is text I'm just putting here to fill up space for this quote box. I don't know what else to put here.</h1>
+      <h5 class="quote-author">-Me, Just Now</h5>
+    </div>
+  </div>
+  <!-- ============= end of quote ============= -->
+
+  <!-- ============= start of call to action section ============= -->
+  <div class="call-to-action">
+    <div class="cta-flex">
+      <div class="cta-column">
+        <h1 class="cta-title">Call to action</h1>
+        <p class="cta-para">This spot would be asking you to do something if it were a real website.</p>
+      </div>
+        <button id="cta-sign-up">Sign Up</button>
+    </div>
+  </div>
+  <!-- ============= end of call to action section ============= -->
 
   <!-- ============= start of footer ============= -->
   <div class="footer">
-
+    <H5>Copyright centered in the footer, 2022</H5>
   </div>
   <!-- ============= end of footer ============= -->
 </body>
